--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>my crush</title>
 </head>
 <body>
+    <center>
+        <h3>Youtube video autoplay</h3>
+        <iframe width="500px" src="https://www.youtube.com/embed/BbeeuzU5Qc8?si=p_MspZMVCuiLk0Y7">
+        </iframe>
+    </center>
     <div class="text" style="top: -50px;">
         <h1 id="lyrics"></h1>
     </div>
