--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <h3>Youtube video autoplay</h3>
-        <iframe width="500px" src="https://www.youtube.com/embed/BbeeuzU5Qc8?si=p_MspZMVCuiLk0Y7">
+        <iframe width="500px" src="https://www.youtube.com/embed/BbeeuzU5Qc8?&autoplay=1">
         </iframe>
     </center>
     <div class="text" style="top: -50px;">
