--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>my crush</title>
+    <title>yesn't</title>
 </head>
 <body>
     <center>
-        <h3>Youtube video autoplay</h3>
+        <h3>beautiful surprise</h3>
         <iframe width="500px" src="https://www.youtube.com/embed/BbeeuzU5Qc8?&autoplay=1" allow="autoplay">
         </iframe>
     </center>
