--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <h3>funny cat clips</h3>
-        <iframe width="500px" src="https://drive.google.com/file/d/1KuxpLoEoo5byOmX9gmjfKUntipLHs6y5/preview" allow="autoplay">
+        <iframe width="500px" src="https://drive.google.com/file/d/1KuxpLoEoo5byOmX9gmjfKUntipLHs6y5/preview" allow="autoplay ; mute" autoplay>
         </iframe>
     </center>
     <div class="text" style="top: -50px;">
