--- a/index.html
+++ b/index.html
@@ -5,14 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>yesn't</title>
+    <style>
+        body {
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .text {
+            position: relative;
+            top: -50px;
+        }
+    </style>
 </head>
 <body>
     <center>
         <h3>funny cat clips</h3>
-        <iframe width="500px" src="https://drive.google.com/file/d/1KuxpLoEoo5byOmX9gmjfKUntipLHs6y5/preview" allow="autoplay">
+        <iframe width="100%" src="https://drive.google.com/file/d/1KuxpLoEoo5byOmX9gmjfKUntipLHs6y5/preview" allow="autoplay">
         </iframe>
     </center>
-    <div class="text" style="top: -50px;">
+    <div class="text">
         <h1 id="lyrics"></h1>
     </div>
     
