--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     </style>
 </head>
 <body>
-    <center>
+    <div class="container">
         <h3>funny cat clips</h3>
         <iframe width="100%" src="https://drive.google.com/file/d/1KuxpLoEoo5byOmX9gmjfKUntipLHs6y5/preview" allow="autoplay">
         </iframe>
-    </center>
+    </div>
+    
     <div class="text">
         <h1 id="lyrics"></h1>
     </div>
